--- a/FirebaseStarterApp/Info.plist
+++ b/FirebaseStarterApp/Info.plist
@@ -59,5 +59,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Carnas.otf</string>
+	</array>
 </dict>
 </plist>
